--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alura+</title>
+    <title>Alura+ Manuela</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
 
-</body>
+</head>
+
+
+<body>
 <section class="principal container">
-    <div class="container caixa">
-        <h1 class="container titulo">Com o combo+, você pode aproveitar a Alura+ e o alura língua por um preço único.</h1>
-        <img src="img/combo.png" alt="image combo alura" class="container img">
-        <a href="www.alura.com.br" class="container botao 1">Assine por 12x  de R$ 120,00*</a>
-        <a href="www.alura.com.br" class="container botao 2">Assinar somente Alura+</a>
-        <p class="container botaoAviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+    <div class="container__caixa">
+        <h1 class="container__titulo">Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="img/combo.png" alt="imagem combo alura" class="container__imagem">
+        <a href="www.alura.com.br" class="container__botao1">Assine por 12x  de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container__botao botao__secundario">Assinar somente Alura+</a>
+        <p class="container__botaoAviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
     </div>
-</section>
+    </section>
+        </body>
+
 </html>
