--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <div class="container__caixa">
         <h1 class="container__titulo">Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
         <img src="img/combo.png" alt="imagem combo alura" class="container__imagem">
-        <a href="www.alura.com.br" class="container__botao1">Assine por 12x  de R$ 120,00*</a>
-        <a href="www.alura.com.br" class="container__botao botao__secundario">Assinar somente Alura+</a>
+        <a href="www.alura.com.br" class="container__botao">Assine por 12x  de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container__botao botao2">Assinar somente Alura+</a>
         <p class="container__botaoAviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
     </div>
+    </section>
+    
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Plataformas" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo"> Assista do seu jeito</h2>
+            <p class="descricao__texto"> Aproveite a tela grande da tv ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer. </p>
+        </div>
     </section>
         </body>
 
