--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alura+ Manuela</title>
+    <title>Alura+ Manuela e Naima</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -13,7 +13,7 @@
 <body>
 <section class="principal container">
     <div class="container__caixa">
-        <h1 class="container__titulo">Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Idiomas por um preço único.</h1>
         <img src="img/combo.png" alt="imagem combo alura" class="container__imagem">
         <a href="www.alura.com.br" class="container__botao">Assine por 12x  de R$ 120,00*</a>
         <a href="www.alura.com.br" class="container__botao botao2">Assinar somente Alura+</a>
@@ -28,6 +28,14 @@
             <p class="descricao__texto"> Aproveite a tela grande da tv ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer. </p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+        <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Idiomas juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender Ingles ou Espanhol, onde e como quiser.</p>
+        <a href="#" class="container__botao secundario__botao">Assine o Combo+</a>
+ </div>
+ <img src="img/telas.png" alt="diferentes Telas" class="secundario__imagem">
+        </section>
         </body>
 
 </html>
