--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 <body>
+    <!-- PRINCIPAL-->
 <section class="principal container">
     <div class="container__caixa">
         <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Idiomas por um preço único.</h1>
@@ -21,6 +22,8 @@
     </div>
     </section>
     
+    <!-- SEÇÃO DOIS-->
+
     <section class="container secundario">
         <img src="img/Plataformas.png" alt="Plataformas" class="secundario__imagem">
         <div class="container__descricao">
@@ -29,6 +32,8 @@
         </div>
     </section>
 
+    <!-- SEÇÃO TRES -->
+
     <section class="container secundario">
         <div class="container__descricao">
         <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Idiomas juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender Ingles ou Espanhol, onde e como quiser.</p>
@@ -36,6 +41,34 @@
  </div>
  <img src="img/telas.png" alt="diferentes Telas" class="secundario__imagem">
         </section>
-        </body>
 
+
+<section class="container secundario">
+    <img src="img/Notebook.png" alt="Notebook com a página do curso" class="secundario__imagem">
+    <div class="container__descricao">
+<h2 class="descricao__titulo"> Baixe seus Cursos </h2>
+<p class="descricao__texto"> Baixe e assista aundo e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+    </div>
+</section>
+
+<section class="dispositivos">
+    <h2 class="dispositivos__titulo"> Disponível nos seus dispositivos favoritos</h2>
+    <ul class="dispositivos__lista">
+        <li>
+            <img src="img/tv.png" alt="ícone de televisão">
+        <h3 class="lista__item">TV</h3>
+        </li>
+        <li>
+            <img src="img/computador.png" alt="ícone computador">
+            <h3 class="lista__item">Computador</h3>
+        </li>
+        <li>
+            <img src="img/celular.png" alt="ícone celular">
+            <h3 class="lista__item">Celular</h3>
+        </li>
+    </ul>
+</section>
+
+
+</body>
 </html>
